--- a/01_basic/HashMapTest/HashMapTest.vcxproj
+++ b/01_basic/HashMapTest/HashMapTest.vcxproj
@@ -20,11 +20,11 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{0E633EFB-86CC-4441-A9BF-CD9DECA4860B}</ProjectGuid>
+    <ProjectGuid>{BADB084F-EC8F-4549-A10D-B28F1B1379D6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>constTest</RootNamespace>
+    <RootNamespace>HashMapTest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-    <ProjectName>03_OperatorOverLoad</ProjectName>
+    <ProjectName>05_HashMapTest</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -144,12 +144,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="constTest.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="constTest.cpp" />
+    <ClCompile Include="HashMapTest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
