--- a/01_basic/ExceptionHandling/ExceptionHandling.vcxproj
+++ b/01_basic/ExceptionHandling/ExceptionHandling.vcxproj
@@ -20,11 +20,11 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{0E633EFB-86CC-4441-A9BF-CD9DECA4860B}</ProjectGuid>
+    <ProjectGuid>{EC5C7FEF-53DA-4A47-821D-A35840E69564}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>constTest</RootNamespace>
+    <RootNamespace>ExceptionHandling</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-    <ProjectName>03_OperatorOverLoad</ProjectName>
+    <ProjectName>06_ExceptionHandling</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -144,12 +144,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="constTest.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="constTest.cpp" />
+    <ClCompile Include="ExceptionHandling.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
